--- a/Piscine-Reloaded/ex27/Makefile
+++ b/Piscine-Reloaded/ex27/Makefile
@@ -1,20 +1,20 @@
 NAME = ft_display_file
-SRCS = ft_display_file.c
-OBJS = $(SRCS:.c=.o)
+SRC = ft_display_file.c
+OBJ = $(SRC:.c=.o)
 
 CC = cc
 CFLAGS = -Wall -Wextra -Werror -I.
 
 all: $(NAME)
 
-$(NAME): $(OBJS)
+$(NAME): $(OBJ)
 	$(CC) $(CFLAGS) -o $@ $^
 
 %.o: %.c
 	$(CC) $(CFLAGS) -c $< -o $@
 
 clean:
-	rm -f $(OBJS)
+	rm -f $(OBJ)
 
 fclean: clean
 	rm -f $(NAME)
